<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:hint="@string/full_name"
            style="@style/AppTheme"
        android:textColor="@color/md_theme_onPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:hint="@string/email"
            style="@style/AppTheme"
        android:textColor="@color/md_theme_onPrimary"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            style="@style/AppTheme"
        android:textColor="@color/md_theme_onPrimary"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
        android:textColor="@color/md_theme_onPrimary"
            android:hint="@string/age"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:background="@color/md_theme_primary"
            android:textColor="@color/md_theme_onPrimary"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="?attr/materialButtonStyle"/>

    </LinearLayout>
</ScrollView>