<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    tools:context=".DiseaseFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/diagnostics"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/you_might_be_affected_by"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/material_dynamic_primary90"
        app:cardCornerRadius="20sp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="174dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/osteoarthritis"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:progress="90"
                app:layout_constraintBottom_toTopOf="@+id/progressBar4"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rhinitis"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <ProgressBar
                android:id="@+id/progressBar4"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:progress="70"
                app:layout_constraintBottom_toTopOf="@+id/progressBar5"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoulder_injury"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <ProgressBar
                android:id="@+id/progressBar5"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:progress="65"
                app:layout_constraintBottom_toTopOf="@+id/progressBar6"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/progressBar4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chikungunya"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <ProgressBar
                android:id="@+id/progressBar6"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:progress="30"
                app:layout_constraintBottom_toTopOf="@+id/progressBar7"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/progressBar5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dengue"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <ProgressBar
                android:id="@+id/progressBar7"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:progress="20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/progressBar6" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_suggested_dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/suggested_department"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/tv_suggested_dept_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/orthopedics"
        android:textColor="@color/material_dynamic_primary30"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_book_appointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_suggested_dept" />

    <Button
        android:id="@+id/btn_book_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_appointment"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>